--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ sitemap:
 					<div id="intro">
             <h1>{{site.title}}</h1>
 						<h2>Software developer</h2>
-						<p>Interested in Web Applications, Game development and Artificial Intelligence</p>
+						<p>Web Applications, Game development and Artificial Intelligence</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -52,20 +52,18 @@ sitemap:
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Welcome to my site</a></h2>
-									<p>Here I'll be posting my projects for anyone interested.</p>
+									<h2><a href="#">Welcome</a></h2>
+									<p>Here I'll be sharing my projects for anyone interested.</p>
 								</header>
 								<a href="#" class="image main"><img src="{{ "/images/main_pic.jpg" | absolute_url }}" alt="" /></a>
-                <p>Hello, my name is Adrián Bouza and I welcome you to my site. Here I'll adding different projects that I'm making that I think 
+                <p>Hello, my name is Adrián Bouza and I welcome you to my site. Here I'll adding different projects that I'm developing that I think 
 					could be interesting to share.</p>
 
-                <p>Right now I'm specially focus on different fields that I really like. My personal favorite is Game developing. I'm no expert in this matter and all I've 
-					learnt was self-taught. I started with it several years ago dedicating little to no time into learning the fundamentals. Thats why as of today I'm still a 
+                <p>This site will be specially focus in Game Developing. I'm no expert in this matter and all I've 
+					learnt was self-taught. I started with it several years ago dedicating little to no time into learning the fundamentals as a hobby. Thats why as of today I'm still a 
 					begginner-intermidiate in this field but I would like to share my progress so it can help anyone who is in the same situation as me.
 				</p>
-				<p>The other fields that I'm interested into are Web developing and Artificial Intelligence. I'm not dedicating too much time to them but I intend to do it 
-					soon enough, especially Artificial Intelligence since I studied Computer Engineering in college.
-					</p>
+
 
 							</article>
 
