--- a/receipt_tracker/index.html
+++ b/receipt_tracker/index.html
@@ -187,7 +187,7 @@
 
         <div class="screenshot-gallery">
             <div class="screenshot-item">
-                <img src="https://raw.githubusercontent.com/google/gemini-canvas-sample-apps/main/src/images/20250717_184424471_iOS.jpg" alt="App Screenshot 1 - Dashboard">
+                <img src="20250717_184346148_iOS.png" alt="App Screenshot 1 - Dashboard">
             </div>
             <div class="screenshot-item">
                 <img src="https://raw.githubusercontent.com/google/gemini-canvas-sample-apps/main/src/images/20250717_184455266_iOS.jpg" alt="App Screenshot 2 - Monthly Receipts">
