--- a/receipt_tracker/index.html
+++ b/receipt_tracker/index.html
@@ -164,7 +164,7 @@
                 <div class="side-button power-button"></div>
                 <div class="screen">
                     <!-- Main screenshot for the hero image -->
-                    <img src="https://raw.githubusercontent.com/google/gemini-canvas-sample-apps/main/src/images/20250717_184424471_iOS.jpg" alt="App Screenshot 1 - Dashboard">
+                    <img src="20250717_184424471_iOS.png" alt="App Screenshot 1 - Dashboard">
                 </div>
             </div>
             <div class="text-content">
@@ -173,9 +173,6 @@
                 <div class="flex space-x-4">
                     <button class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
                         Download Now
-                    </button>
-                    <button class="bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
-                        Learn More
                     </button>
                 </div>
             </div>
@@ -190,10 +187,10 @@
                 <img src="20250717_184346148_iOS.png" alt="App Screenshot 1 - Dashboard">
             </div>
             <div class="screenshot-item">
-                <img src="https://raw.githubusercontent.com/google/gemini-canvas-sample-apps/main/src/images/20250717_184455266_iOS.jpg" alt="App Screenshot 2 - Monthly Receipts">
+                <img src="20250717_184455266_iOS.png" alt="App Screenshot 2 - Monthly Receipts">
             </div>
             <div class="screenshot-item">
-                <img src="https://raw.githubusercontent.com/google/gemini-canvas-sample-apps/main/src/images/20250717_184346148_iOS.png" alt="App Screenshot 3 - Receipt Details">
+                <img src="20250717_184538328_iOS.png" alt="App Screenshot 3 - Receipt Details">
             </div>
         </div>
 
