--- a/receipt_tracker/index.html
+++ b/receipt_tracker/index.html
@@ -150,6 +150,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            padding: 2px 2px;
         }
     </style>
 </head>
