--- a/receipt_tracker/index.html
+++ b/receipt_tracker/index.html
@@ -164,7 +164,6 @@
                 <div class="side-button volume-down"></div>
                 <div class="side-button power-button"></div>
                 <div class="screen">
-                    <!-- Main screenshot for the hero image -->
                     <img src="20250717_184424471_iOS.png" alt="App Screenshot 1 - Dashboard">
                 </div>
             </div>
@@ -209,7 +208,15 @@
                 <p>Dive deep into individual receipts with full product lists, prices, and easy editing options.</p>
             </div>
         </div>
-    </div>
+
+        <hr class="border-t-2 border-gray-100 my-8">
+        
+        <div class="text-center py-6">
+            <h2 class="text-4xl font-bold text-gray-800 mb-6">Contact & Support</h2>
+            <p class="text-lg text-gray-600 mb-2">For any questions, feedback, or support requests, please reach out to us.</p>
+            <p class="text-lg text-gray-800 font-semibold">abnaveira.dev@gmail.com</p>
+        </div>
+        </div>
 
 </body>
 </html>
